Working on fixing text overflows.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -162,6 +162,7 @@ body{
     padding: 1%;
     margin-top: 2%;
     margin-left: -2%;
+    width: 100%;
 }
 
 
